--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-native-gesture-handler": "~1.0.14",
+    "react-native-google-signin": "^1.2.1",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
