--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "~1.0.14",
     "react-native-google-signin": "^1.2.1",
     "react-navigation": "^3.5.1"
