--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "~1.0.14",
     "react-native-google-signin": "^1.2.1",
+    "react-native-instagram-login": "^1.1.1",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
