--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.2.2",
     "react": "16.8.3",
     "react-native": "0.59.1",
+    "react-native-elements": "^1.1.0",
     "react-native-fbsdk": "^0.8.0",
     "react-native-gesture-handler": "~1.0.14",
     "react-native-google-signin": "^1.2.1",
