--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,6 +142,7 @@ android {
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 dependencies {
+    implementation project(':react-native-share')
     implementation project(':react-native-splash-screen')
     implementation project(':react-native-firebase')
     implementation project(':@react-native-community_async-storage')
