--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.2.2",
+    "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.1",
     "react-native-elements": "^1.1.0",
