--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-native-gesture-handler": "~1.0.14",
     "react-native-google-signin": "^1.2.1",
     "react-native-instagram-login": "^1.1.1",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-responsive-screen": "^1.2.2",
     "react-native-share": "^1.1.3",
     "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.5.1"
