--- a/ios/spiritpedia/Info.plist
+++ b/ios/spiritpedia/Info.plist
@@ -73,6 +73,8 @@
 		<string>Roboto_medium.ttf</string>
 		<string>Roboto.ttf</string>
 		<string>rubicon-icon-font.ttf</string>
+		<string>Myriad Pro Regular.ttf</string>
+		<string>MyriadProRegular.ttf</string>
 	</array>
 </dict>
 </plist>
