--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-native-image-picker": "^0.28.1",
     "react-native-instagram-login": "^1.1.1",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-modal": "^11.4.0",
     "react-native-responsive-screen": "^1.2.2",
     "react-native-share": "^1.1.3",
+    "react-native-snap-carousel": "^3.8.1",
     "react-native-splash-screen": "^3.2.0",
     "react-navigation": "^3.5.1"
   },
